# poincare

./: CHANGELOG.md  README.md  loop-sim.ipynb  pyproject.toml  test.ipynb
.github/workflows/: ci.yml
docs/: Asymptotic_behaviour.ipynb  Composing.ipynb  Getting_started_with_poincare.ipynb  Simulation.ipynb
examples/: forced_oscillator.py  lotka_volterra.py  oscillators.py  pendulum.py
src/poincare/: __init__.py  _node.py  _utils.py  compile.py  period_methods.py  simulator.py  solvers.py  types.py  units.py
src/poincare/_loop/: __init__.py  _loop.py  _simulator.py  test_loop.py
src/poincare/analysis/: oscillations.py  period_methods.py  steady_state.py  sweeper.py
src/poincare/analysis/tests/: test_oscillations.py  test_steady_state.py  test_sweeper.py
src/poincare/cellular_auotmata/: ca_simulator.py  ca_types.py
src/poincare/cellular_auotmata/tests/: test_ca.py
src/poincare/printing/: latex.py  table.py
src/poincare/printing/tests/: test_latex.py
src/poincare/reactions/: __init__.py  reactions.py  rebop.py
src/poincare/reactions/_librebop/: __init__.py  _rebopexpr.py  lang.py  real.py
src/poincare/reactions/rebop/: __init__.py  rebop.py
src/poincare/reactions/rebop/_librebop/: _rebop_names.py  lang.py  real.py
src/poincare/reactions/tests/: test_reactions.py  test_rebop.py
src/poincare/tests/: test_eval.py  test_interact.py  test_units.py
src/poincare/tests/simulator/: test_initials.py  test_names.py  test_oscillations.py  test_steady_state.py  test_transform.py
