[project]
name = "poincare"
description = "Simulation of dynamical systems."
version = "1.0.0b3"
authors = [
  { name = "Hernán E. Grecco", email = "hernan.grecco@gmail.com" },
  { name = "Mauro Silberberg", email = "maurosilber@gmail.com" },
]
readme = "README.md"
license = "MIT"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries",
]
keywords = ["dynamical systems", "differential equations", "ODE"]
requires-python = ">=3.12"
dependencies = [
  "numpy",
  "pandas",
  "xarray",
  "pint-xarray",
  "pint",
  "pint-pandas",
  "scipy",
  "symbolite>=1.0.0",
  "tabulate",
  "typing_extensions",
  "scipy-events >= 0.3.1",
  "statsmodels",
]

[project.optional-dependencies]
interactive = ["ipywidgets"]

[project.urls]
Homepage = "https://github.com/dyscolab/poincare"
Issues = "https://github.com/dyscolab/poincare/issues"
Documentation = "https://dyscolab.github.io/poincare"

[build-system]
requires = ["uv_build>=0.9,<0.10"]
build-backend = "uv_build"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib --doctest-modules"
pythonpath = "."
testpaths = [
  "src/poincare/tests",
  "src/poincare/analysis/tests",
  "src/poincare/printing/tests",
  "src/poincare/reactions/tests",
]
doctest_optionflags = "NUMBER"
filterwarnings = "ignore:No libsl provided, defaulting to Python standard library."

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = ["I"]

[tool.pyright]
typeCheckingMode = "standard"
venv = "default"
venvPath = ".pixi/envs/"

[tool.pyrefly]
python-interpreter-path = ".pixi/envs/default/bin/python"
project-excludes = [".pixi", "**/__pycache__"]

[tool.ty.environment]
python = ".pixi/envs/default"

[tool.pixi.workspace]
channels = ["https://prefix.dev/conda-forge"]
platforms = ["linux-64", "osx-arm64", "win-64"]
preview = ["pixi-build"]

[tool.pixi.package.build]
backend = { name = "pixi-build-python", version = "0.4.*" }

[tool.pixi.package.host-dependencies]
uv-build = "*"

[tool.pixi.package.run-dependencies]
numpy = "*"
pandas = "*"
xarray = "*"
pint-xarray = "*"
pint = "*"
scipy = "*"
tabulate = "*"
typing_extensions = "*"
# symbolite = ">=1.0.0"
scipy-events = ">=0.3.1"
pytest = ">=8.4.0,<9"
statsmodels = "*"

[tool.pixi.environments]
default = ["test", "py312"]
lint = { features = ["lint"], no-default-feature = true }
build = { features = ["build"], no-default-feature = true }
test-py312 = ["test", "py312"]
test-py313 = ["test", "py313"]
# test-py314 = ["test", "py314"]

[tool.pixi.dependencies]
poincare = { path = "." }

[tool.pixi.feature.lint.dependencies]
pre-commit = "*"
pre-commit-hooks = "*"
taplo = "*"
ruff = "*"
mdformat = "*"
mdformat-ruff = "*"

[tool.pixi.feature.lint.tasks]
pre-commit-install = "pre-commit install"
lint = "pre-commit run --all-files"

[tool.pixi.feature.build.dependencies]
uv = "*"

[tool.pixi.feature.build.tasks]
_build = "uv build"
_publish = "uv publish"

[tool.pixi.feature.test.dependencies]
pytest = "*"
cloudpickle = "<3.1.0"
matplotlib = "*"
numba = "*"
ipywidgets = "*"
ipykernel = "*"
sympy = "*"

[tool.pixi.feature.test.target.unix.dependencies]
jax = "*"

[tool.pixi.feature.test.tasks]
test = "pytest --doctest-modules"

[tool.pixi.feature]
py312.dependencies = { python = "3.12.*" }
py313.dependencies = { python = "3.13.*" }
# py314.dependencies = { python = "3.14.*" }
